--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,15 @@
     <string name="pay_with_nfc">Kredi Kartı (NFC)</string>
     <string name="pay_with_loyalty">Sadakat Kartı (NFC)</string>
 
-    <string name="products_title">Ürünler</string>
-
-    <string name="nfc_payment_title">NFC ile Ödeme</string>
     <string name="nfc_payment_welcome">NFC ile ödeme ekranına hoş geldiniz.</string>
 
     <string name="buy_now">Satın Al</string>
+    <string name="language">Dil</string>
+
+    <string name="home_title">Ana Sayfa</string>
+    <string name="products_title">Ürünler</string>
+    <string name="sales_title">Satışlar</string>
+    <string name="settings_title">Ayarlar</string>
+    <string name="qr_payment_title">QR ile Ödeme</string>
+    <string name="nfc_payment_title">NFC ile Ödeme</string>
 </resources>
